Finally fixed whitespace issue

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -215,6 +215,13 @@ header .intro-text .skills {
   font-size: 18pt;
   font-weight: 300;
 }
+#languages {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
 #languages ul > li {
   min-height: 30px;
   padding: 5px;
